st/mesa: fix format selection regression

Note all gallium formats are supported by Mesa so disable them.
Fixes regression from 1a339b6c71ebab6e1a64f05b2e133022d3bbcd15.

See https://bugs.freedesktop.org/show_bug.cgi?id=38602